# Dual_PCS

./: .gitignore  Cargo.toml  LICENSE  README.md
Grand_product/grand_product_with_air/: Cargo.toml
Grand_product/grand_product_with_air/benches/: grand_product_benchmark.rs
Grand_product/grand_product_with_air/src/: lib.rs
Grand_product/grand_product_with_air/src/grand_product_common/: mod.rs
Grand_product/grand_product_with_air/src/grand_product_test/: common.rs  mod.rs  test_prover.rs  test_verifier.rs
Grand_product/grand_product_with_air/src/prover/: evaluations.rs  grand_product.rs  mod.rs  poly.rs  trace.rs
Grand_product/grand_product_with_air/src/verifier/: mod.rs
Grand_product/grand_product_with_gkr/: Cargo.toml
Grand_product/grand_product_with_gkr/benches/: grand_product_benchmark.rs
Grand_product/grand_product_with_gkr/src/: lib.rs
Grand_product/grand_product_with_gkr/src/gkr_common/: mod.rs
Grand_product/grand_product_with_gkr/src/grand_product_test/: common.rs  mod.rs  test_prover.rs  test_verifier.rs
Grand_product/grand_product_with_gkr/src/prover/: mod.rs  reed_solomon.rs
Grand_product/grand_product_with_gkr/src/verifier/: mod.rs
KZG/kzg/: Cargo.toml  README.md
KZG/kzg/benches/: kzg_benchmark.rs
KZG/kzg/src/: commit.rs  lib.rs  polynomial.rs  prover.rs  setup.rs  test.rs  verifier.rs
KZG/kzg_fft/: Cargo.toml
KZG/kzg_fft/benches/: kzg_fft_benchmark.rs
KZG/kzg_fft/src/: commit.rs  common.rs  lib.rs  prover.rs  setup.rs  test.rs  verifier.rs
Multilinear/kzg_fourier_multilinear/: Cargo.toml
Multilinear/kzg_fourier_multilinear/benches/: kzg_fourier_benchmark.rs
Multilinear/kzg_fourier_multilinear/src/: batch_prover.rs  batch_verifier.rs  common.rs  lib.rs  multilinear_common.rs  prover.rs  setup.rs  test.rs  verifier.rs
Multilinear/multilinear_kzg/: Cargo.toml
Multilinear/multilinear_kzg/benches/: multilinear_kzg_benchmark.rs
Multilinear/multilinear_kzg/src/: lib.rs  test.rs
Multilinear/multilinear_kzg/src/common/: mod.rs
Multilinear/multilinear_kzg/src/prover/: mod.rs
Multilinear/multilinear_kzg/src/verifier/: mod.rs
Spartan/Spartan_with_air/: Cargo.toml
Spartan/Spartan_with_air/benches/: spartan_benchmark.rs
Spartan/Spartan_with_air/src/: test.rs
Spartan/Spartan_with_air/src/preprocessing/: mod.rs
Spartan/Spartan_with_air/src/prover/: Spartan.code-workspace  batch_eval.rs  er1cs.rs  mod.rs
Spartan/Spartan_with_air/src/spartan_common/: mod.rs
Spartan/Spartan_with_air/src/verifier/: batch_opening.rs  er1cs.rs  mod.rs
Spartan/Spartan_with_gkr/: Cargo.toml
Spartan/Spartan_with_gkr/benches/: spartan_benchmark.rs
Spartan/Spartan_with_gkr/src/: lib.rs  test.rs
Spartan/Spartan_with_gkr/src/preprocessing/: mod.rs
Spartan/Spartan_with_gkr/src/prover/: batch_eval.rs  er1cs.rs
Spartan/Spartan_with_gkr/src/spartan_common/: mod.rs
Spartan/Spartan_with_gkr/src/verifier/: batch_opening.rs  er1cs.rs
dory/: Cargo.toml
dory/src/: dory_prover.rs  dory_verifier.rs  lib.rs
fft/: Cargo.toml  README.md
fft/src/: bit_reverse.rs  lib.rs  par_fft.rs  serial_fft.rs  test.rs
helper/: Cargo.toml
helper/channel/: Cargo.toml
helper/channel/src/: lib.rs
helper/hash/hash_traits/: Cargo.toml
helper/hash/hash_traits/src/: traits.rs
helper/hash/keccak/: Cargo.toml
helper/hash/keccak/src/: lib.rs  test.rs
helper/polynomial/: Cargo.toml
helper/polynomial/src/: lib.rs
helper/random/: Cargo.toml
helper/random/src/: errors.rs  lib.rs
helper/src/: helper.rs  lib.rs
helper/utils/core/: Cargo.toml  README.md
helper/utils/core/src/: collections.rs  errors.rs  iterators.rs  lib.rs  string.rs  tests.rs
helper/utils/rand/: Cargo.toml  README.md
helper/utils/rand/src/: lib.rs
linking_prover/: Cargo.toml
linking_prover/src/: commit.rs  lib.rs  prover.rs
linking_verifier/: Cargo.toml
linking_verifier/src/: lib.rs  verifier.rs
main/: Cargo.toml
main/benches/: linking_benchmark.rs  multilinear_benchmark.rs  univariate_benchmark.rs
main/src/: main.rs
pairing/: Cargo.toml  README.md
pairing/src/: bls.rs  bn.rs  lib.rs  line.rs  pairing_traits.rs
pairing/src/bls/: bls_pairing.rs  bls_trait.rs  optimal.rs  test.rs
pairing/src/bn/: bn_pairing.rs  bn_traits.rs  optimal.rs  testbn.rs
setup/: Cargo.toml
setup/benches/: linking_setup_benchmark.rs
setup/src/: lib.rs
uni_multi_prover/: Cargo.toml
uni_multi_prover/src/: lib.rs  multilinear.rs  univariate.rs
uni_multi_verifier/: Cargo.toml
uni_multi_verifier/src/: lib.rs  multilinear.rs  univariate.rs
