[workspace]
members = [
    "setup",
    "helper",
    "linking_prover",
    "linking_verifier",
    "main",
    "dory",
    "uni_multi_prover",
    "uni_multi_verifier",
    "KZG/kzg",
    "KZG/kzg_fft",
    "Multilinear/kzg_fourier_multilinear",
    "Multilinear/multilinear_kzg",
    "Spartan/Spartan_with_gkr",
    "Spartan/Spartan_with_air",
    "Grand_product/grand_product_with_air",
    "Grand_product/grand_product_with_gkr",
    "helper/channel",
    "helper/random",
    "helper/polynomial",
    "helper/hash/keccak",
    "helper/hash/hash_traits",
    "pairing",
    "fft",
]
