package = { name = "dory", version = "0.1.0" }

[dependencies]
crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main", features = [
    "generic-array",
    "zeroize",
] }
traits = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
curve_traits = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
bls381 = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
bls_curve = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
pairing = { git = "ssh://git@github.com/arithmic/Pairing_Open.git", branch = "main" }
helper = { version = "0.1.0", path = "../helper" }

channel = {version = "0.1.0", path = "../helper/channel"}
rayon = "*"
crossbeam = "0.8.2"
