[package]
name = "fft"
version = "0.1.0"
edition = "2021"


[dependencies]

crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main", features = [
    "generic-array",
    "zeroize",
] }

rayon = "1.7.0"
utils = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
itertools = "0.11.0"
stark252 = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
f128 = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
traits = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
