package = { name = "linking_prover", version = "0.1.0" }

[dependencies]
helper = { version = "0.1.0", path = "../helper" }

curve_traits = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
bls381 = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
bls_curve = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
pairing = { version = "0.1.0", path = "../pairing" }
fft = {version = "0.1.0", path = "../fft"}
dory = { version = "0.1.0", path = "../dory" }
rayon = "1.7.0"
crossbeam = "0.8.2"
