[package]
name = "setup"
version = "0.1.0"
[dependencies]
crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main", features = [
    "generic-array",
    "zeroize",
] }
traits = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
curve_traits = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
bls381 = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
bls_curve = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
pairing = { git = "ssh://git@github.com/arithmic/Pairing_Open.git", branch = "main" }
helper = { version = "0.1.0", path = "../helper" }

rayon = "*"
fft = { git = "ssh://git@github.com/arithmic/FFT_Open.git", branch = "main" }
criterion = "0.5"

[lib]
bench = false

[dev-dependencies]
criterion-plot = "0.4"

[[bench]]
name = "linking_setup_benchmark"
harness = false
features = ["std"]
