[package]
name = "setup"
version = "0.1.0"
[dependencies]
crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main", features = [
    "generic-array",
    "zeroize",
] }
traits = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
curve_traits = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
bls381 = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
bls_curve = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
pairing = { version = "0.1.0", path = "../pairing" }
helper = { version = "0.1.0", path = "../helper" }

rayon = "*"
fft = {version = "0.1.0", path = "../fft"}

criterion = "0.5"

[lib]
bench = false

[dev-dependencies]
criterion-plot = "0.4"

[[bench]]
name = "linking_setup_benchmark"
harness = false
features = ["std"]
