[package]
name = "uni_multi_verifier"
version = "0.1.0"
[dependencies]
crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main", features = [
    "generic-array",
    "zeroize",
] }
traits = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
curve_traits = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
bls381 = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
bls_curve = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
pairing = { version = "0.1.0", path = "../pairing" }
helper = { version = "0.1.0", path = "../helper" }

rayon = "*"
crossbeam = "0.8.2"
fft = {version = "0.1.0", path = "../fft"}
channel = {version = "0.1.0", path = "../helper/channel"}
setup = { version = "0.1.0", path = "../setup" }
dory = { version = "0.1.0", path = "../dory" }
