[package]
name = "grand_product_with_gkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls381 = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
bls_curve = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
traits = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
fft = { git = "ssh://git@github.com/arithmic/FFT_Open.git", branch = "main" }
crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main" }
kzg = { version = "0.1.0", path = "../../KZG/kzg" }
multilinear_kzg = { version = "0.1.0", path = "../../Multilinear/multilinear_kzg" }
polynomial = { version = "0.1.0", path = "../../helper/polynomial" }
channel = { version = "0.1.0", path = "../../helper/channel" }


rayon = "1.8.0"
rand = "0.8.5"
[dev-dependencies]
criterion = "0.5"

[lib]
bench = false

[[bench]]
name = "grand_product_benchmark"
harness = false
features = ["std"]
