[package]
name = "kzg_fft"
version = "0.1.0"
[dependencies]
crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main", features = [
    "generic-array",
    "zeroize",
] }
traits = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
curve_traits = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
bls381 = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
bls_curve = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
pairing = { version = "0.1.0", path = "../../pairing" }
helper = { version = "0.1.0", path = "../../helper" }
channel = { version = "0.1.0", path = "../../helper/channel" }
rayon = "*"
fft = {version = "0.1.0", path = "../../fft"}

[lib]
bench = false

[dev-dependencies]
criterion = "0.5"


[[bench]]
name = "kzg_fft_benchmark"
harness = false
features = ["std"]
