package = { name = "kzg_fourier_multilinear", version = "0.1.0" }

[dependencies]
helper = { version = "0.1.0", path = "../../helper" }
curve_traits = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
bls381 = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
bls_curve = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
pairing = { git = "ssh://git@github.com/arithmic/Pairing_Open.git", branch = "main" }
fft = { git = "ssh://git@github.com/arithmic/FFT_Open.git", branch = "main" }
rayon = "1.7.0"
traits = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main", features = [
    "generic-array",
    "zeroize",
] }
kzg_fft = { version = "0.1.0", path = "../../KZG/kzg_fft" }
channel = { version = "0.1.0", path = "../../helper/channel" }

[lib]
bench = false

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "kzg_fourier_benchmark"
harness = false
features = ["std"]
