[package]
name = "multilinear_kzg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traits = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
curve_traits = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
bls381 = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
bls_curve = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
pairing = { git = "ssh://git@github.com/arithmic/Pairing_Open.git", branch = "main" }
rayon = "1.8.0"
crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main", features = [
    "generic-array",
    "zeroize",
] }

[lib]
bench = false

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "multilinear_kzg_benchmark"
harness = false
features = ["std"]
