[package]
name = "multilinear_kzg"
version = "0.1.0"
edition = "2021"

[dependencies]
traits = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
curve_traits = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
bls381 = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
bls_curve = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
pairing = { version = "0.1.0", path = "../../pairing" }
rayon = "1.8.0"
crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main", features = [
    "generic-array",
    "zeroize",
] }

[lib]
bench = false

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "multilinear_kzg_benchmark"
harness = false
features = ["std"]
