[package]
name = "channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random = { path = "../random" }
hash_traits = { version = "0.1.0", path = "../hash/hash_traits" }
bls381 = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
bls_curve = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
traits = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
utils = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
multilinear_kzg = { version = "0.1.0", path = "../../Multilinear/multilinear_kzg" }
crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main", features = [
    "generic-array",
    "zeroize",
] }
keccak = { version = "0.1.0", path = "../hash/keccak" }
