[package]
name = "random"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand-utils = { version = "0.1.0", path = "../utils/rand" }
utils = { version = "0.1.0", path = "../utils/core", default-features = false }
blake3 = { version = "1.0", default-features = false }
bls381 = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
bls_curve = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
traits = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
non_algebraic_hash_traits = { git = "ssh://git@github.com/arithmic/Hashes_Open.git", branch = "main" }
crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main", features = [
    "generic-array",
    "zeroize",
] }
