[package]
name = "random"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand-utils = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
utils = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
blake3 = { version = "1.0", default-features = false }
bls381 = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
bls_curve = { git = "ssh://git@github.com/arithmic/ECC_Open.git", branch = "main" }
traits = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
hash_traits = { version = "0.1.0", path = "../hash/hash_traits" }
crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main", features = [
    "generic-array",
    "zeroize",
] }
