[package]
name = "keccak"
version = "0.1.0"

[dependencies]
traits = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main", features = [
    "generic-array",
    "zeroize",
] }
bls381 = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
utils = { git = "ssh://git@github.com/arithmic/Field_Open.git", branch = "main" }
sha3 = { version = "0.10", default-features = false }
hash_traits = { version = "0.1.0", path = "../hash_traits" }
